--- a/retainify/src/app/reader/reader.css
+++ b/retainify/src/app/reader/reader.css
@@ -1,8 +1,10 @@
 iframe {
   width: 100%;
   height: 100%;
-}
-iframe {
   display: flex;
   justify-content: center;
+}
+iframe html {
+  max-width: 100%;
+  max-height: 80vh;
 }
